# emesh

./: Cargo.toml  README.md
crates/emesh/: Cargo.toml  README.md
crates/emesh-cli/: Cargo.toml  README.md
crates/emesh-cli/src/: arguments.rs  cli.rs  error.rs  main.rs
crates/emesh-cli/src/commands/: test.rs
crates/emesh-core/: Cargo.toml  README.md
crates/emesh-core/src/: error.rs  lib.rs  mesh.rs  polygon.rs
crates/emesh/src/: lib.rs
