[package]
name = "emesh-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for processing 3D polygon meshes."


[dependencies]
emesh = { version = "0.0.1-alpha.4", path = "../emesh" }

clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
