[package]
name = "emesh-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core primitives and operations for processing 3D polygon meshes."

[dependencies]
ecoord = { workspace = true }

thiserror = { workspace = true }
polars = { workspace = true }
rayon = { workspace = true }
nalgebra = { workspace = true }
